--- a/gleam.toml
+++ b/gleam.toml
@@ -1,8 +1,8 @@
-name = "gleam_stdlib"
+name = "gleam_dotnet_stdlib"
 version = "0.40.0"
 gleam = ">= 0.32.0"
 licences = ["Apache-2.0"]
-description = "A standard library for the Gleam programming language"
+description = "A Fork of the standard library for the Gleam programming language with .NET target support"
 
 repository = { type = "github", user = "gleam-lang", repo = "stdlib" }
 links = [
@@ -11,6 +11,7 @@ links = [
 ]
 
 [javascript.deno]
-allow_read = [
-  "./",
-]
+allow_read = ["./"]
+
+[fsharp]
+target_framework = "net8.0"
