Fix some issues with graphemes and codepoints

--- a/.editorconfig
+++ b/.editorconfig
@@ -22,6 +22,6 @@ indent_size = 4
 max_line_length = 80
 
 
-[*.fsx]
+[*.{fs,fsx}]
 indent_size = 4
-multiline_bracket_style = stroustrup
+fsharp_multiline_bracket_style = stroustrup
